@@ -49,6 +49,9 @@ void CDVDOverlayRenderer::Render_SPU_YUV(DVDPictureRenderer* pPicture, CDVDOverl
   int btn_y_start = pOverlay->crop_i_y_start;
   int btn_y_end   = pOverlay->crop_i_y_end;
   
+  int *p_color;
+  int p_alpha;
+
   p_dest[0] = pPicture->data[0] + pPicture->stride[0] * pOverlay->y;
   p_dest[1] = pPicture->data[1] + pPicture->stride[1] * (pOverlay->y >> 1);
   p_dest[2] = pPicture->data[2] + pPicture->stride[2] * (pOverlay->y >> 1);
@@ -63,77 +66,86 @@ void CDVDOverlayRenderer::Render_SPU_YUV(DVDPictureRenderer* pPicture, CDVDOverl
       i_color = *p_source & 0x3;
       rp_len = *p_source++ >> 2;
 
-      pixels_to_draw = rp_len;
-      
-      if (bCrop)
-      {
-        // skip if this line is not drawn at all
-        if (i_y < btn_y_start || i_y > btn_y_end) continue;
-
-        // skip if this rle part is not drawn at all
-        if ((i_x + rp_len) < btn_x_start || i_x > btn_x_end) continue;
-        
-        // at least one part of the rle part has to be drawn, figure out how much and what
-        if (i_x < btn_x_start)
-        {
-          // skip beginning of rle part
-          rp_len -= btn_x_start - i_x;
-          i_x = btn_x_start;
-        }
-        
-        // check if we need to skip a part at the end
+      while( rp_len > 0 )
+      {      
         pixels_to_draw = rp_len;
-        if (pixels_to_draw > (btn_x_end - i_x)) pixels_to_draw = (btn_x_end - i_x);
-      }
-      
-      switch (pOverlay->alpha[i_color])
-      {
-      case 0x00:
-        break;
 
-      case 0x0f:
-        memset(p_dest[0] + i_x, pOverlay->color[i_color][0], pixels_to_draw);
-        if (!(i_y & 1)) // Only draw even lines
-        {
-          memset(p_dest[1] + (i_x >> 1), pOverlay->color[i_color][2], pixels_to_draw >> 1);
-          memset(p_dest[2] + (i_x >> 1), pOverlay->color[i_color][1], pixels_to_draw >> 1);
-        }
-        break;
+        p_color = pOverlay->color[i_color];
+        p_alpha = pOverlay->alpha[i_color];
 
-      default:
-        /* To be able to divide by 16 (>>4) we add 1 to the alpha.
-          * This means Alpha 0 won't be completely transparent, but
-          * that's handled in a special case above anyway. */ 
-        // First we deal with Y
-        i_colprecomp = (unsigned __int16)pOverlay->color[i_color][0]
-                      * (unsigned __int16)(pOverlay->alpha[i_color] + 1);
-        i_destalpha = 15 - pOverlay->alpha[i_color];
-        
-        for (p_destptr = p_dest[0] + i_x; p_destptr < p_dest[0] + i_x + pixels_to_draw; p_destptr++)
+        if (bCrop)
         {
-          *p_destptr = (( i_colprecomp + (unsigned __int16) * p_destptr * i_destalpha ) >> 4) & 0xFF;
+          if (i_y > btn_y_start && i_y < btn_y_end)
+          {            
+            if (i_x < btn_x_start && i_x + rp_len >btn_x_start) // starts outside
+              pixels_to_draw = btn_x_start - i_x;
+            else if( i_x > btn_x_start && i_x < btn_x_end ) // starts inside
+            {
+              p_color = pOverlay->highlight_color[i_color];
+              p_alpha = pOverlay->highlight_alpha[i_color];              
+              pixels_to_draw = btn_x_end - i_x; // don't draw part that is outside
+            }
+          }
+          /* make sure we are not requested to draw to far */
+          /* that part will be taken care of in next pass */
+          if( pixels_to_draw > rp_len ) 
+            pixels_to_draw = rp_len;
         }
         
-        if (!(i_y & 1)) // Only draw even lines
+        switch (p_alpha)
         {
-          // now U
-          i_colprecomp = (unsigned __int16)pOverlay->color[i_color][2]
-                        * (unsigned __int16)(pOverlay->alpha[i_color] + 1);
-          for ( p_destptr = p_dest[1] + (i_x >> 1); p_destptr < p_dest[1] + ((i_x + pixels_to_draw) >> 1); p_destptr++)
+        case 0x00:
+          break;
+
+        case 0x0f:
+          memset(p_dest[0] + i_x, p_color[0], pixels_to_draw);
+          if (!(i_y & 1)) // Only draw even lines
+          {
+            memset(p_dest[1] + (i_x >> 1), p_color[2], pixels_to_draw >> 1);
+            memset(p_dest[2] + (i_x >> 1), p_color[1], pixels_to_draw >> 1);
+          }
+          break;
+
+        default:
+          /* To be able to divide by 16 (>>4) we add 1 to the alpha.
+            * This means Alpha 0 won't be completely transparent, but
+            * that's handled in a special case above anyway. */ 
+          // First we deal with Y
+          i_colprecomp = (unsigned __int16)p_color[0]
+                        * (unsigned __int16)(p_alpha + 1);
+          i_destalpha = 15 - p_alpha;
+          
+          for (p_destptr = p_dest[0] + i_x; p_destptr < p_dest[0] + i_x + pixels_to_draw; p_destptr++)
           {
             *p_destptr = (( i_colprecomp + (unsigned __int16) * p_destptr * i_destalpha ) >> 4) & 0xFF;
           }
-          // and finally V
-          i_colprecomp = (unsigned __int16)pOverlay->color[i_color][1]
-                        * (unsigned __int16)(pOverlay->alpha[i_color] + 1);
-          for ( p_destptr = p_dest[2] + (i_x >> 1); p_destptr < p_dest[2] + ((i_x + pixels_to_draw) >> 1); p_destptr++)
+          
+          if (!(i_y & 1)) // Only draw even lines
           {
-            *p_destptr = (( i_colprecomp + (unsigned __int16) * p_destptr * i_destalpha ) >> 4) & 0xFF;
+            // now U
+            i_colprecomp = (unsigned __int16)p_color[2]
+                          * (unsigned __int16)(p_alpha + 1);
+            for ( p_destptr = p_dest[1] + (i_x >> 1); p_destptr < p_dest[1] + ((i_x + pixels_to_draw) >> 1); p_destptr++)
+            {
+              *p_destptr = (( i_colprecomp + (unsigned __int16) * p_destptr * i_destalpha ) >> 4) & 0xFF;
+            }
+            // and finally V
+            i_colprecomp = (unsigned __int16)p_color[1]
+                          * (unsigned __int16)(p_alpha + 1);
+            for ( p_destptr = p_dest[2] + (i_x >> 1); p_destptr < p_dest[2] + ((i_x + pixels_to_draw) >> 1); p_destptr++)
+            {
+              *p_destptr = (( i_colprecomp + (unsigned __int16) * p_destptr * i_destalpha ) >> 4) & 0xFF;
+            }
           }
+          break;
         }
-        break;
+
+        /* add/subtract what we just drew */
+        rp_len -= pixels_to_draw;
+        i_x += pixels_to_draw;
       }
     }
+
     p_dest[0] += pPicture->stride[0];
     if (i_y & 1)
       continue;
